--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+dnspython==1.16.0
 Flask==1.1.1
 Flask-SocketIO==4.2.1
 Flask-WTF==0.14.3
@@ -32,6 +33,7 @@ protobuf==3.11.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.5.0
+pymongo==3.10.1
 python-engineio==3.11.2
 python-socketio==4.4.0
 PyYAML==5.3
